# weather-mcp-server

./: .gitignore  README.md  pyproject.toml  server.json  weather.py
.github/workflows/: ci.yml
